style.css
/* this is on every page*/
header {
    font-size: 35px;
    width: 100%;
    background-color: black;
    color: white;
    padding: 4px;
    text-align: center;
}

.center {
  margin-left: auto;
  margin-right: auto;
   width: 80%;
   height:auto;
   text-align: center;
}

img{
  width: 100%;
}

.logo{
  width:20px;
}

ul {
  list-style-type: none;
}

p {
    font-family: "Domine", serif;
}

nav{
  border: black;
  background-color: #F1B82D;
  text-align: center;
  width: 100%;
}

nav li {
  font-size: 18px;
  padding: 4px 0;
  font-size: 200%
}

footer{
  text-align: center;
  background-color: #F1B82D;
  width: 100%;
  clear: both;
}

}
/* this is end of every page content*/

/* this is homepage only*/
.figure{
  height: auto;
   width: 100%;
}
/* this is end of homepage only*/


.q{
  color: #F1B82D;
  font-weight: bold;
}
.internalheader {
  text-align: center;
  font-size: 32px;
}

h1 a:link{
  text-decoration: none;
  color: white;
}

h1 a:visited{
  text-decoration: none;
  color: white;
}

/* this is maps page only*/
.housedecsmap{
  padding: 10px;
}

.paraderoutemap{
  padding: 10px;
}

h4{
  font-size: 25px;
  font-weight: bold;
}
/* this is end of maps only*/

nav a:visited, nav a:link{
  text-decoration: none;
  color: black;
  font-weight: bold;
}

/* this is spotlight page only*/
.spotlightsidebar {
  clear: both;
  text-align: center;
}

.spotlightmain{
  float: right;
  width:70%;
}

.avatar{

}
/* this is end of spotlight page only*/

